Update HTML structure and title for projects page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphic Design</title>
+    <title>PROJECTS</title>
     <link rel="stylesheet" href="./styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- HEADER -->
+
+    <!-- MY TASK -->
+
+    <!-- PROJECTS -->
     <section class="projects-section">
         <div class="projects-container">
     
@@ -55,6 +60,8 @@
     
         </div>
     </section>
-</body>
+    <!-- REVIEWS -->
 
+    <!-- FOOTER -->
+</body>
 </html>
