--- a/index.html
+++ b/index.html
@@ -61,7 +61,50 @@
         </div>
     </section>
     <!-- REVIEWS -->
+     <!-- LEFT -->
+    <div class="item left">
+      <div class="avatar red">
+        <img src="anna.jpg">
+      </div>
+      <div class="card red">
+        <strong>Anna Schmidt</strong>
+        <p>Fast quality work, good service,<br>24 hours on call, reasonable prices</p>
+      </div>
+    </div>
+
+    <!-- CENTER -->
+    <div class="item center">
+      <div class="avatar dark big">
+        <img src="mark.jpg">
+      </div>
+      <div class="card dark">
+        <strong>Mark Spencer</strong>
+        <span class="line"></span>
+        <p>
+          Individual approach,<br>
+          good service,<br>
+          interesting new ideas,<br>
+          fast, high quality
+        </p>
+      </div>
+    </div>
+
+    <!-- RIGHT -->
+    <div class="item right">
+      <div class="avatar light">
+        <img src="daria.jpg">
+      </div>
+      <div class="card light">
+        <strong>Daria Graf</strong>
+        <p>
+          Creative approach, listens to<br>
+          the customer and considers<br>
+          an individual approach
+        </p>
+      </div>
+    </div>
 
     <!-- FOOTER -->
 </body>
 </html>
+
