Refactor index.html for better structure and readability
Updated HTML structure and improved formatting.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECTS</title>
+    <!-- STYLE -->
     <link rel="stylesheet" href="./styles.css">
+     <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -14,7 +16,7 @@
 
     <!-- PROJECTS -->
     <section class="projects-section">
-        <div class="projects-container">
+        <div class="container">
     
             <h2 class="projects-title">PROJECTS</h2>
     
@@ -107,4 +109,5 @@
     <!-- FOOTER -->
 </body>
 </html>
+
 
