--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <div class="menu">
                     <h3>DESIGN SERVICES</h3>
                     <p>Main page</p>
-                    <p>Terms Of Service</p>
+                    <p>Terms Of Serviceoo</p>
                 </div>
             
                 <div class="contact">
