--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PROJECTS</title>
+    <title>GRAPHIC DESIGN</title>
     <!-- FONTS -->
     <link
       href="https://fonts.googleapis.com/css2?family=Syncopate:wght@400;700&display=swap"
