--- a/index.html
+++ b/index.html
@@ -29,10 +29,37 @@
         <a href="#">Reviews</a>
         <a href="#">Contacts</a>
     </nav>
-    <div class="button">
+    <div class="button"> 
         <button>Contact me</button>
     </div>
 </header>
+<section class="header-bottom">
+    <div class="wrap">
+
+        <div class="text graphic">GRAPHIC</div>
+        <div class="text design">design</div>
+
+        <div class="circle-area">
+            <div class="center-fill"></div>
+            <div class="outer-circle"></div>
+
+            <div class="dot left"></div>
+            <div class="dot right"></div>
+
+            <img src="images/girl.png" class="photo">
+        </div>
+
+        <div class="caption left">
+            Any kind of work in the field of<br>
+            graphic and motion design
+        </div>
+
+        <div class="caption right">
+            Fast and quality work
+        </div>
+
+    </div>
+</section>
     <section class="my-task">
         <div class="container">
             <h2 class="title">MY TASK</h2>
