--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         </div>
 
     </div>
+  <main>
 </section>
     <section class="my-task">
         <div class="container">
@@ -233,6 +234,7 @@
   </article>
 
 </section>
+    </main>
 
 </body>
 
